# cc-project-template

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.__project_slug }}/: .readthedocs.yml  LICENSE  README.md  codecov.yml  pyproject.toml
{{ cookiecutter.__project_slug }}/.github/: PULL_REQUEST_TEMPLATE.md  auto_assign.yml  release-drafter.yml
{{ cookiecutter.__project_slug }}/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
{{ cookiecutter.__project_slug }}/.github/workflows/: auto_update_release_drafter.yml  deploy.yml  test.yml
{{ cookiecutter.__project_slug }}/docs/: conf.py  index.md  requirements.txt
{{ cookiecutter.__project_slug }}/{{ cookiecutter.__project_slug }}/: __init__.py
